src/objects/CBStyle__c.object
<CustomObject>
    <fields>
        <fullName>BackgroundColor__c</fullName>
        <label>Background Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS__c</fullName>
        <formula>&apos; { &apos; + 
&apos;color:&apos; +  Color__c + &apos; !important; &apos; +
&apos;font-weight:&apos; +  FontWeight__c + &apos; !important; &apos; + 
&apos;font-family: &apos; +  Font__c + &apos; !important; &apos; + 
&apos;background-color:&apos; +  BackgroundColor__c + &apos; !important; &apos; + 
&apos;pointer-events:&apos; +  State__c + &apos; !important; &apos; + 
&apos; } &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Text Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontWeight__c</fullName>
        <label>Font Weight</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font__c</fullName>
        <label>Font Family</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CB Style</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CSS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBStyle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Unique_Name_field</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The style with this name already exists, please enter a different name</errorMessage>
    </validationRules>
</CustomObject>